# aura

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  HIVE_STATE.md  INTRO.md  Makefile  README.md  SUMMARY.md  TELEMETRY.md  agent_sim.py  autonomous_buyer.py  buf.gen.yaml  buf.yaml  compose.yml  gemini-review.md  hive-manifest.yaml  pyproject.toml  search_sim.py  test_security.py  test_telemetry_comprehensive.py
.beads/: issues.jsonl
.github/workflows/: bee-keeper.yaml  ci-cd.yaml  distill-knowledge.yml
adapters/mcp-server/: IMPLEMENTATION_SUMMARY.md  README.md  demo.py  mock_mcp.py  pyproject.toml  server.py  test_integration.py  (+1 more)
api-gateway/: Dockerfile  pyproject.toml
api-gateway/src/: config.py  health.py  logging_config.py  main.py  security.py  telemetry.py
api-gateway/src/proto/aura/dna/v1/: dna_pb2.py
core/: Dockerfile  alembic.ini  pyproject.toml
core-service/: Dockerfile  pyproject.toml  test_dspy_integration.py  test_dspy_simple.py  test_json_parsing.py  test_minimal_dspy.py  train_dspy.py
core-service/data/: aura_brain.json
core-service/migrations/: env.py
core-service/migrations/versions/: 77450f9e9330_add_vector_extension.py  ea82989ed431_initial_migration_inventory_tables.py
core-service/scripts/training/: train_dspy.py
core-service/src/: config.py  db.py  embeddings.py  llm_strategy.py  logging_config.py  main.py  monitor.py  seed.py
core-service/src/config/: heartbeat.py  llm.py  server.py
core-service/src/hive/: aggregator.py  dna.py  metabolism.py  metrics.py  transformer.py  types.py
core-service/src/llm/: engine.py  strategy.py
core-service/src/proto/aura/negotiation/v1/: negotiation_pb2.py  negotiation_pb2.pyi  negotiation_pb2_grpc.py
core-service/tests/: test_dspy_integration.py  test_dspy_simple.py  test_hive.py  test_json_parsing.py  test_litellm_strategy.py  test_membrane.py  test_minimal_dspy.py
deploy/: prometheus.yml
docs/: AISYNC_VISION.md  API_SPECIFICATION.md  ARCHITECTURE.md  CLAUDE.md  CRYPTO_QUICKSTART.md  DEVELOPER_GUIDE.md  ENVIRONMENT.md  FOUNDATION.md  FOUNDATIONS.md  HEALTH_CHECK_IMPLEMENTATION.md  HEALTH_ENDPOINTS_QUICK_REFERENCE.md  MANIFEST.md  README.md  SECURITY.md  TELEMETRY.md  arch_brain.json
frontend/: Dockerfile  GATEWAY_CONFIG_SUMMARY.md  README.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json  verify-env-config.sh
tests/: test_health_endpoints.py  test_security.py  test_telemetry_comprehensive.py
tools/: agent_sim.py  autonomous_buyer.py  distill_knowledge.py  test_health_endpoints.py  test_security.py  test_telemetry_comprehensive.py  validate_knowledge.py
(+243 files in other folders)
