[project]
name = "aura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "langchain-mistralai>=1.1.1",
    "mypy-protobuf>=5.0.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[[tool.uv.index]]
url = "https://buf.build/gen/python"
