[project]
name = "core-service"
version = "0.1.0"
description = "Aura Core Service"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "structlog>=25.0.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "protobuf>=6.33.5",
    "grpcio-health-checking>=1.76.0",
    "langchain-mistralai>=1.1.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-grpc>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-langchain>=0.1.0",
    "httpx>=0.27.0",
    "litellm>=1.63.0",
    "jinja2>=3.1.4",
    "dspy-ai>=2.0.0",
    "prometheus-client>=0.21.1",
    "solana>=0.34.0",
    "solders>=0.21.0",
    "cryptography>=43.0.0",
    "nats-py>=2.9.0",
    "aura-core",
]

[tool.uv.sources]
aura-core = { path = "../packages/aura-core" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
